# robot_companion

./: .gitmodules  README.md
follow_human/: CMakeLists.txt  package.xml
follow_human/launch/: follow_human.launch
follow_human/src/: follow_human.cpp
leg_detector/: CMakeLists.txt  package.xml
leg_detector/launch/: leg_detector.launch
leg_detector/src/leg_detector/: detector.cpp
raycasting/: CMakeLists.txt  package.xml
raycasting/launch/: raycasting.launch  raycasting_navigation.launch
raycasting/src/Scripts/: assign3.py~  assign3_own.py~  raycast.py
raycasting/src/map/: map.pgm  map.yaml
tracking/: CMakeLists.txt  package.xml
tracking/launch/: track.launch
tracking/scripts/: intention.py  sfm.py
